# telegram_api_toolkit

./: .gitignore  LICENSE  pyproject.toml  run.py
docker/: Dockerfile
src/: app.py  main.py
src/handlers/: __init__.py  register.py  text.py  utils.py
src/messages/: __init__.py  message_handlers.py  utils.py
src/settings/: __init__.py  settings.py
